# innowise_laboratory

./: .gitignore  README.md
lecture_1/: pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: data.sql  school.db
lecture_5/: README.md
lecture_5/book_api/: pyproject.toml  requirements.txt  run.py
lecture_5/book_api/app/: dependencies.py  models.py  runAPI.py  schemas.py
lecture_5/book_api/database/: engine.py
lecture_6/: Dockerfile  main.py
